--- a/src/app/confirmbooking/confirmbooking.component.html
+++ b/src/app/confirmbooking/confirmbooking.component.html
@@ -26,11 +26,11 @@
 				<form #f="ngForm">
 					<div class="form-group">
 						<div class="form-group">
-						<label for="paymentmode">Choose payment method:<span class="small"> (For PayPal, you will be redirected to the payment gateway)</span></label>
-						<select #paymentmode="ngModel" ngModel name="paymentmode" id="paymentmode" class="form-control" size="3" placeholder="Choose payment mode">
-							<option [ngValue]="'cash'" selected>Cash</option>
-							<option [ngValue]="'paypal'" >PayPal</option>
-						</select>
+							<label for="paymentmode">Choose payment method:<span class="small"> (For PayPal, you will be redirected to the payment gateway)</span></label>
+							<select #paymentmode="ngModel" ngModel name="paymentmode" id="paymentmode" class="form-control" size="3" placeholder="Choose payment mode">
+								<option [ngValue]="'cash'" selected>Cash</option>
+								<option [ngValue]="'paypal'" >PayPal</option>
+							</select>
 						</div>
 						<!-- <div class="form-check">
 							<input #paymentmode1="ngModel" ngModel class="form-check-input" type="radio" name="paymentmode1" id="paymentmode1paymentmode1" value="option1" checked>
@@ -67,9 +67,14 @@
 					</div>	
 					<br/>
 					<div class="form-group">
-						<button class="btn btn-primary" [disabled]="!t.checked" (click)="book(f.value)">Confirm Booking</button>
+						<button class="btn btn-primary" [disabled]="!t.checked" [hidden]="paymentmode.value=='paypal'" (click)="book('cash')">Confirm Booking</button>
+
+						<div [hidden]="paymentmode.value!='paypal'">
+							<div id="paypal-checkout-btn"></div>
+						</div>
+
 					</div>
-					
+
 				</form>
 			</div>
 		</div>
